# react-rust-ec-project

./: .gitignore  Makefile  docker-compose-prod.yml  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile  entrypoint.sh
backend/migrations/: 20250701074815_create_users_table.sql
backend/src/: lib.rs  main.rs
backend/src/db/: mod.rs  postgres.rs  query.rs
backend/src/models/: product.rs  user.rs
backend/src/repository/: mod.rs  productRepository.rs
backend/src/routes/: hello.rs  mod.rs
backend/src/store/: store.rs
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/data/: dummy_inventory_data.json  dummy_product.json
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/app/components/: NotFound.tsx
frontend/src/app/components/inventory/: InventoryLayout.module.scss  InventoryLayout.tsx
frontend/src/app/components/inventory/productList/: ProductListPage.tsx
frontend/src/app/components/inventory/productList/product/: Product.tsx
frontend/src/app/components/login/: LoginPage.tsx
frontend/src/app/domain/: IInventoryData.ts  IProduct.ts
frontend/src/app/repositories/: IProductRepository.ts
frontend/src/app/utils/: date.ts
frontend/src/dev/: dummyInventoryRepository.ts  mockRepository.ts
nginx/: Dockerfile  Dockerfile.prod  nginx-dev.conf  nginx.conf
