[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"

# DB & async runtime
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }

# 型変換と構造体
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# 環境変数読み込み
dotenvy = "0.15"

# エラー処理
anyhow = "1.0"
thiserror = "1.0"

# ログ出力
tracing = "0.1"
tracing-subscriber = "0.3"